# two_axis_cart_pole

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README.md  pyproject.toml
.antigravitycli/: 59004453-35d0-4625-b0e7-e4ada1f1ba49.json
assets/: mk2.xml  mk4.xml
controllers/: __init__.py  coupled_energy_swingup.py  hybrid.py  lqr.py  manual.py  pilco.py
docs/: pilco_code_lab.md  pilco_foundations_lab.md
envs/: __init__.py  gymnasium_wrapper.py  gymnasium_wrapper_skeleton.py  mujoco_interface.py
scripts/: evaluate_controllers.py  evaluate_pilco_controller.py  pilco_learning_lab.py  pilco_workflow.py  record_demo.py  render_pilco_controller.py  run_hybrid_controller.py  run_viewer.py  train_pilco_controller.py
tests/: __init__.py  test_controller_safety.py  test_model_regularity.py  test_pilco_components.py
